--- a/web/.classpath
+++ b/web/.classpath
@@ -24,7 +24,7 @@
 	<classpathentry kind="lib" path="WebRoot/WEB-INF/lib/asm-3.2.jar"/>
 	<classpathentry kind="lib" path="WebRoot/WEB-INF/lib/commons-pool-1.5.4.jar"/>
 	<classpathentry kind="lib" path="WebRoot/WEB-INF/lib/jedis-2.1.0.jar"/>
-	<classpathentry kind="lib" path="WebRoot/WEB-INF/lib/junit-4.11.jar"/>
+	<classpathentry kind="lib" path="WebRoot/WEB-INF/lib/junit-4.11.jar" sourcepath="D:/repo/junit/junit/4.11/junit-4.11-sources.jar"/>
 	<classpathentry kind="lib" path="WebRoot/WEB-INF/lib/hamcrest-core-1.3.jar"/>
 	<classpathentry kind="con" path="com.genuitec.runtime.library/com.genuitec.generic_6.0">
 		<attributes>
