--- a/web/.classpath
+++ b/web/.classpath
@@ -26,6 +26,8 @@
 	<classpathentry kind="lib" path="WebRoot/WEB-INF/lib/jedis-2.1.0.jar"/>
 	<classpathentry kind="lib" path="WebRoot/WEB-INF/lib/junit-4.11.jar" sourcepath="D:/repo/junit/junit/4.11/junit-4.11-sources.jar"/>
 	<classpathentry kind="lib" path="WebRoot/WEB-INF/lib/hamcrest-core-1.3.jar"/>
+	<classpathentry kind="lib" path="WebRoot/WEB-INF/lib/netty-all-4.1.17.Final-sources.jar"/>
+	<classpathentry kind="lib" path="WebRoot/WEB-INF/lib/netty-all-4.1.17.Final.jar"/>
 	<classpathentry kind="con" path="com.genuitec.runtime.library/com.genuitec.generic_6.0">
 		<attributes>
 			<attribute name="owner.project.facets" value="jst.web"/>
